Custom--app/main/default/objects/Rehab__c/fields/GC_Completion_Date_Revised__c.field-meta.xml
<CustomField>
    <fullName>GC_Completion_Date_Revised__c</fullName>
    <label>GC Completion Date - Revised</label>
    <type>Date</type>
</CustomField>