Custom--app/main/default/objects/Rehab__c/fields/GC_Completion_Date_Revised_Notes__c.field-meta.xml
<CustomField>
    <fullName>GC_Completion_Date_Revised_Notes__c</fullName>
    <label>GC Completion Date - Progress Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>