Custom--app/main/default/objects/Rehab__c/fields/GC_Completion_Date_Revised_Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>GC_Completion_Date_Revised_Push_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GC Completion Date-Revised Push Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>