Custom--app/main/default/objects/Rehab__c/fields/GC_Email__c.field-meta.xml
<CustomField>
    <fullName>GC_Email__c</fullName>
    <formula>Contact__r.Email</formula>
    <label>GC Email</label>
    <type>Text</type>
</CustomField>