Custom--app/main/default/objects/Rehab__c/fields/GC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>GC_First_Name__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <label>GC First Name</label>
    <type>Text</type>
</CustomField>