Custom--app/main/default/objects/Rehab__c/fields/GC_Name__c.field-meta.xml
<CustomField>
    <fullName>GC_Name__c</fullName>
    <formula>Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Name</label>
    <type>Text</type>
</CustomField>