Custom--app/main/default/objects/Rehab__c/fields/GC_Performance__c.field-meta.xml
<CustomField>
    <fullName>GC_Performance__c</fullName>
    <inlineHelpText>At the conclusion of the job, this field can be used to make notes about the GC performance that would be helpful in evaluating the GC.</inlineHelpText>
    <label>GC Performance</label>
    <type>TextArea</type>
</CustomField>