Custom--app/main/default/objects/Rehab__c/fields/GC_Phone__c.field-meta.xml
<CustomField>
    <fullName>GC_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Phone</label>
    <type>Text</type>
</CustomField>