Custom--app/main/default/objects/Rehab__c/fields/GC_Score__c.field-meta.xml
<CustomField>
    <fullName>GC_Score__c</fullName>
    <description>General Contractor will be awarded with points once he has finished his job for this particular project. Grading would be as follows
A=4
B=3
C=2
D=1
F=0</description>
    <inlineHelpText>A= Highest Satisfaction</inlineHelpText>
    <label>GC Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>