Custom--app/main/default/objects/Rehab__c/fields/GC_State__c.field-meta.xml
<CustomField>
    <fullName>GC_State__c</fullName>
    <formula>Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC State</label>
    <type>Text</type>
</CustomField>