Custom--app/main/default/objects/Rehab__c/fields/GC_Street__c.field-meta.xml
<CustomField>
    <fullName>GC_Street__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Street</label>
    <type>Text</type>
</CustomField>