Custom--app/main/default/objects/Rehab__c/fields/GC_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>GC_Zip_Code__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC Zip Code</label>
    <type>Text</type>
</CustomField>