Custom--app/main/default/objects/Rehab__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rehabs: General Contractor Projects</relationshipLabel>
    <relationshipName>Rehabs1</relationshipName>
    <type>Lookup</type>
</CustomField>