Custom--app/main/default/objects/Rehab__c/fields/HD_Budget_Walk__c.field-meta.xml
<CustomField>
    <fullName>HD_Budget_Walk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HD Budget Walk</label>
    <referenceTo>HD_Budget_Walk__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>