Custom--app/main/default/objects/Rehab__c/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>