Custom--app/main/default/objects/Rehab__c/fields/IH_Rep_Attending__c.field-meta.xml
<CustomField>
    <fullName>IH_Rep_Attending__c</fullName>
    <label>IH Rep Attending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>