Custom--app/main/default/objects/Rehab__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <inlineHelpText>This will be auto-calculate the  number of PTL Line items (phase 2 of the Nitro integration.)</inlineHelpText>
    <label># Items</label>
    <summaryForeignKey>PTL__c.Rehab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>