Custom--app/main/default/objects/Rehab__c/fields/Key_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Transfer_Date__c</fullName>
    <label>Key Transfer Date</label>
    <type>Date</type>
</CustomField>