Custom--app/main/default/objects/Rehab__c/fields/Key_Transfer_Location__c.field-meta.xml
<CustomField>
    <fullName>Key_Transfer_Location__c</fullName>
    <formula>TEXT(Renewal__r.Key_Transfer_Location__c)</formula>
    <inlineHelpText>This field is editable on Renewal.</inlineHelpText>
    <label>Key Transfer Location</label>
    <type>Text</type>
</CustomField>