Custom--app/main/default/objects/Rehab__c/fields/Key_Transfer_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Key_Transfer_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Transfer Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>