Custom--app/main/default/objects/Rehab__c/fields/Last_Adjusted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Adjusted_Date__c</fullName>
    <label>Last Adjusted Date</label>
    <type>Date</type>
</CustomField>