Custom--app/main/default/objects/Rehab__c/fields/Lease_Active__c.field-meta.xml
<CustomField>
    <fullName>Lease_Active__c</fullName>
    <formula>Renewal__r.Lease__r.Yardi_Active_Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Active</label>
    <type>Checkbox</type>
</CustomField>