Custom--app/main/default/objects/Rehab__c/fields/Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date__c</fullName>
    <formula>Renewal__r.Lease__r.Lease_From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>