Custom--app/main/default/objects/Rehab__c/fields/Lease_Start_Date_App_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date_App_Tracker__c</fullName>
    <description>Lease Start Date from  Application tracking of Listing</description>
    <label>Lease Start Date(App Tracker)</label>
    <type>Date</type>
</CustomField>