Custom--app/main/default/objects/Rehab__c/fields/Left_or_Over_Spent_Budget_Revised__c.field-meta.xml
<CustomField>
    <fullName>Left_or_Over_Spent_Budget_Revised__c</fullName>
    <formula>Projected_Spend_Running_Total__c - Budget_Revised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Budget Revised minus the Projected Spend total</inlineHelpText>
    <label>Over/Under Committed to Revised Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>