Custom--app/main/default/objects/Rehab__c/fields/Left_Over_Spent_Rehab_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Left_Over_Spent_Rehab_Est_UW__c</fullName>
    <formula>Projected_Spend_Running_Total__c - Rehab_Est_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over/Under Committed to UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>