Custom--app/main/default/objects/Rehab__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <description>Hold Status of Related Listing</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>