Custom--app/main/default/objects/Rehab__c/fields/Locksmith__c.field-meta.xml
<CustomField>
    <fullName>Locksmith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locksmith</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>