Custom--app/main/default/objects/Rehab__c/fields/Locksmith_Contact__c.field-meta.xml
<CustomField>
    <fullName>Locksmith_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locksmith Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Locksmith__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rehabs (Locksmith Contact)</relationshipLabel>
    <relationshipName>RehabsWhereContactIsLocksmith</relationshipName>
    <type>Lookup</type>
</CustomField>