Custom--app/main/default/objects/Rehab__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <inlineHelpText>Milestone Tasks will only be created if Back-End Supervisor has a value.</inlineHelpText>
    <label>Milestones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Re-Key</fullName>
            </value>
            <value>
                <fullName>Landscape</fullName>
            </value>
            <value>
                <fullName>Tile / Wood Ordered</fullName>
            </value>
            <value>
                <fullName>Trash Out</fullName>
            </value>
            <value>
                <fullName>QC Pass</fullName>
            </value>
            <value>
                <fullName>Supervisor Sign-off</fullName>
            </value>
            <value>
                <fullName>Office Sign-off</fullName>
            </value>
            <value>
                <fullName>Before Photos</fullName>
            </value>
            <value>
                <fullName>Budget Revised</fullName>
            </value>
            <value>
                <fullName>Water on</fullName>
            </value>
            <value>
                <fullName>Power on</fullName>
            </value>
            <value>
                <fullName>Carpet</fullName>
            </value>
            <value>
                <fullName>Carpet Cleaning</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Tub/Surround Refinishers</fullName>
            </value>
            <value>
                <fullName>Blinds</fullName>
            </value>
            <value>
                <fullName>Glass/Window</fullName>
            </value>
            <value>
                <fullName>Garage door</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Cabinets</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
            <value>
                <fullName>5-day Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>