Custom--app/main/default/objects/Rehab__c/fields/MOI_Contact_Attempt_1__c.field-meta.xml
<CustomField>
    <fullName>MOI_Contact_Attempt_1__c</fullName>
    <description>For Turn</description>
    <label>MOI Contact Attempt 1</label>
    <type>Date</type>
</CustomField>