Custom--app/main/default/objects/Rehab__c/fields/MOI_Contact_Attempt_2__c.field-meta.xml
<CustomField>
    <fullName>MOI_Contact_Attempt_2__c</fullName>
    <description>Used for Turn Process</description>
    <label>MOI Contact Attempt 2</label>
    <type>Date</type>
</CustomField>