Custom--app/main/default/objects/Rehab__c/fields/MOI_Contact_Attempt_2_Notes__c.field-meta.xml
<CustomField>
    <fullName>MOI_Contact_Attempt_2_Notes__c</fullName>
    <description>Used for Turn Process</description>
    <label>MOI Contact Attempt 2 Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>