Custom--app/main/default/objects/Rehab__c/fields/MOI_Date_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>MOI_Date_Scheduled__c</fullName>
    <description>Used for Turn Process</description>
    <label>MOI Date Scheduled</label>
    <type>DateTime</type>
</CustomField>