Custom--app/main/default/objects/Rehab__c/fields/MOI_Move_Out_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>MOI_Move_Out_Inspection_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Turn Process</description>
    <label>MOI Move Out Inspection Completed</label>
    <type>Checkbox</type>
</CustomField>