Custom--app/main/default/objects/Rehab__c/fields/MOI_Tenant_Request_to_be_Present__c.field-meta.xml
<CustomField>
    <fullName>MOI_Tenant_Request_to_be_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Turn Process</description>
    <label>MOI Tenant Request to be Present</label>
    <type>Checkbox</type>
</CustomField>