Custom--app/main/default/objects/Rehab__c/fields/Most_Recent_Pre_Signoff_QC_Audit__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pre_Signoff_QC_Audit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Pre Signoff QC Audit</label>
    <referenceTo>QC_Audit__c</referenceTo>
    <relationshipLabel>Rehabs</relationshipLabel>
    <relationshipName>Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>