Custom--app/main/default/objects/Rehab__c/fields/Most_Recent_QC_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_QC_Audit_Date__c</fullName>
    <label>Most Recent QC Audit Date</label>
    <summarizedField>QC_Audit__c.Date__c</summarizedField>
    <summaryForeignKey>QC_Audit__c.Rehab__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>