Custom--app/main/default/objects/Rehab__c/fields/Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Date__c</fullName>
    <formula>Renewal__r.Lease__r.Move_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move In Date (from Yardi)</label>
    <type>Date</type>
</CustomField>