Custom--app/main/default/objects/Rehab__c/fields/Move_In_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move-In Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs6</relationshipName>
    <type>Lookup</type>
</CustomField>