Custom--app/main/default/objects/Rehab__c/fields/Move_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Time__c</fullName>
    <label>Move In Time</label>
    <type>DateTime</type>
</CustomField>