Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Actual__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Actual__c</fullName>
    <description>Renewal__r.Actual_Move_Out_Date__c</description>
    <formula>Renewal__r.Actual_Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Move Out Date</label>
    <type>Date</type>
</CustomField>