Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Charge_List_Emailed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Charge_List_Emailed_Timestamp__c</fullName>
    <description>Move-Out Charge List Emailed (Timestamp)</description>
    <label>Move-Out Charge List Emailed (Timestamp)</label>
    <type>DateTime</type>
</CustomField>