Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Charge_List_Emailed_to_Resident__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Charge_List_Emailed_to_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Move-Out Charge List Emailed to Resident</description>
    <label>Move-Out Charge List Emailed to Resident</label>
    <type>Checkbox</type>
</CustomField>