Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Comments__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Comments__c</fullName>
    <formula>Renewal__r.Move_Out_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Located on the Renewal record.</inlineHelpText>
    <label>Move Out Comments</label>
    <type>Text</type>
</CustomField>