Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Date__c</fullName>
    <formula>Renewal__r.Lease__r.Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Located on the Renewal record.</inlineHelpText>
    <label>Move Out Date (from Yardi)</label>
    <type>Date</type>
</CustomField>