Custom--app/main/default/objects/Rehab__c/fields/Move_Out_Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Schedule_Notes__c</fullName>
    <label>Move Out Schedule Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>