Custom--app/main/default/objects/Rehab__c/fields/MTM_Per_Yardi__c.field-meta.xml
<CustomField>
    <fullName>MTM_Per_Yardi__c</fullName>
    <formula>Renewal__r.Lease__r.Month_to_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTM Per Yardi</label>
    <type>Checkbox</type>
</CustomField>