Custom--app/main/default/objects/Rehab__c/fields/National_Rehab_Director__c.field-meta.xml
<CustomField>
    <fullName>National_Rehab_Director__c</fullName>
    <formula>Case (Region__c, 

"Atlanta","Adam Love", 
"Charlotte","Adam Love", 
"Chicago","Adam Love", 
"Inland Empire","Aaron Stone", 
"Jacksonville","Adam Love", 
"Las Vegas","Aaron Stone", 
"Los Angeles","Aaron Stone", 
"Miami","Adam Love",
"Minneapolis", "Adam Love", 
"Orlando","Adam Love", 
"Phoenix","Aaron Stone", 
"Sacramento","Aaron Stone", 
"Seattle","Aaron Stone", 
"Tampa","Adam Love",
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Rehab Director</label>
    <type>Text</type>
</CustomField>