Custom--app/main/default/objects/Rehab__c/fields/Non_RevEx_Budget__c.field-meta.xml
<CustomField>
    <fullName>Non_RevEx_Budget__c</fullName>
    <formula>Budget_Revised__c  -  RevEx_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-RevEx Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>