Custom--app/main/default/objects/Rehab__c/fields/Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Notice_Date__c</fullName>
    <formula>Renewal__r.Lease__r.Notice_Date__c</formula>
    <inlineHelpText>Located on the Renewal record.</inlineHelpText>
    <label>Notice Date</label>
    <type>Date</type>
</CustomField>