Custom--app/main/default/objects/Rehab__c/fields/Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Notice_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notice Received</label>
    <type>Checkbox</type>
</CustomField>