Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Electric_meter_reading__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Electric_meter_reading__c</fullName>
    <label>Obsolete Electric Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>