Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Electricty_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Electricty_Action_Items__c</fullName>
    <label>Obsolete Electrical Notes</label>
    <type>TextArea</type>
</CustomField>