Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Gas_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Gas_Action_Items__c</fullName>
    <label>Obsolete Gas Notes</label>
    <type>TextArea</type>
</CustomField>