Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Gas_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Gas_Meter_Reading__c</fullName>
    <label>Obsolete Gas Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>