Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Water_Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Water_Action_Items__c</fullName>
    <label>Obsolete Water Notes</label>
    <type>TextArea</type>
</CustomField>