Custom--app/main/default/objects/Rehab__c/fields/Obsolete_Water_meter_reading__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Water_meter_reading__c</fullName>
    <label>Obsolete Water Meter Reading</label>
    <length>155</length>
    <type>Text</type>
</CustomField>