Custom--app/main/default/objects/Rehab__c/fields/Occupancy_Status_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status_Acquisition__c</fullName>
    <formula>TEXT(Portfolio__r.Occupied_Status_Acquisition__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Status @ Acquisition</label>
    <type>Text</type>
</CustomField>