Custom--app/main/default/objects/Rehab__c/fields/of_Days_Rekey_to_GC_Award__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Rekey_to_GC_Award__c</fullName>
    <formula>Start_Date__c - Re_Key_Date__c</formula>
    <label># of Days Rekey to GC Award</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>