Custom--app/main/default/objects/Rehab__c/fields/Of_Properties_Green__c.field-meta.xml
<CustomField>
    <fullName>Of_Properties_Green__c</fullName>
    <formula>IF(  Red_Yellow_Green__c  = "Green", 1, 0)</formula>
    <label># of Properties in Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>