Custom--app/main/default/objects/Rehab__c/fields/of_Total_Deficiences__c.field-meta.xml
<CustomField>
    <fullName>of_Total_Deficiences__c</fullName>
    <inlineHelpText>Roll Up Summary of the Total Number of Deficiencies for this rehab.</inlineHelpText>
    <label># of Total Deficiences</label>
    <summarizedField>QC_Audit__c.of_Deficiencies_Total__c</summarizedField>
    <summaryFilterItems>
        <field>QC_Audit__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>2 - Post Rehab QC Audit</value>
    </summaryFilterItems>
    <summaryForeignKey>QC_Audit__c.Rehab__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>