Custom--app/main/default/objects/Rehab__c/fields/Office_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_Signoff_Date__c</fullName>
    <label>Office Sign-Off Date</label>
    <type>Date</type>
</CustomField>