Custom--app/main/default/objects/Rehab__c/fields/Outstanding_Deficiencies__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Deficiencies__c</fullName>
    <label>Outstanding Deficiencies</label>
    <summarizedField>QC_Audit__c.Deficiencies_Open__c</summarizedField>
    <summaryFilterItems>
        <field>QC_Audit__c.Status__c</field>
        <operation>equals</operation>
        <value>QC Assigned, QC Open</value>
    </summaryFilterItems>
    <summaryForeignKey>QC_Audit__c.Rehab__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>