Custom--app/main/default/objects/Rehab__c/fields/Personal_Property_Hold_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Personal_Property_Hold_Expiration_Date__c</fullName>
    <label>Personal Property Hold Expiration Date</label>
    <type>Date</type>
</CustomField>