Custom--app/main/default/objects/Rehab__c/fields/PM_Yardi_Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>PM_Yardi_Rent_Roll__c</fullName>
    <formula>Portfolio__r.Residence__r.Most_Recent_Yardi_Rent_Roll__r.Portfolio_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM (From Yardi Rent Roll)</label>
    <type>Text</type>
</CustomField>