Custom--app/main/default/objects/Rehab__c/fields/PointCentral_Hub_Location__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Hub_Location__c</fullName>
    <label>PointCentral Hubs Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>