Custom--app/main/default/objects/Rehab__c/fields/PointCentral_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Install_Date__c</fullName>
    <label>PointCentral Install Date</label>
    <type>Date</type>
</CustomField>