Custom--app/main/default/objects/Rehab__c/fields/PointCentral_Installed_By__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Installed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PointCentral Installed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rehabs7</relationshipName>
    <type>Lookup</type>
</CustomField>