Custom--app/main/default/objects/Rehab__c/fields/PointCentral_Repeaters_Installed__c.field-meta.xml
<CustomField>
    <fullName>PointCentral_Repeaters_Installed__c</fullName>
    <label>PointCentral Repeaters Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>