Custom--app/main/default/objects/Rehab__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <formula>Portfolio__r.Pool__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool</label>
    <type>Text</type>
</CustomField>